# android-container-host

./: .gitignore  Cargo.toml  README.md  SPEC.md
Kconfig/: AndroidContainerHost.Kconfig
achost/: __init__.py  cli.py  config_merge.py  config_rules.py  device_profile.py  kconfig_inject.py  kernel_detect.py  moby_check_config.py  patch_apply.py  report.py  runtime_install.py  runtime_test.py  verify_config.py
crates/achost-docker-runtime/: Cargo.toml
crates/achost-lxc-runtime/: Cargo.toml
crates/achost-lxc-runtime/src/: main.rs
crates/achost-runtime-core/: Cargo.toml
crates/achost-supervise/: Cargo.toml
devices/: xiaomi-sm8250-lmi.yml
docs/: README.md  build-and-package.md  device-compatibility.md  diagnostics.md  install-and-upgrade.md  kernel-build.md  runtime-usage.md
patches/: README.md
profiles/: android-container-host-v1.yml  docker-bridge-overlay2.yml
scripts/: apply-patches.sh  collect-logs.sh  inject-kconfig.sh  merge-fragments.sh  package-all.sh  package-base.sh  package-docker.sh  package-lxc.sh  package-runtime.sh  prepare-tree.sh  rollback.sh  runtime-docker-feature-test.sh  runtime-net-debug.sh  runtime-smoke-docker.sh  runtime-smoke-lxc.sh  runtime-test.sh  verify-config.sh  verify-lxc-checkconfig.sh  verify-moby-check-config.sh
tests/: test_config.py  test_config_merge.py  test_detect.py  test_device_profile.py  test_kconfig_inject.py  test_moby_check_config.py  test_package_scripts.py  test_patch_apply.py  test_runtime_install.py  test_runtime_test.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
