[workspace]
members = [
    "crates/achost-supervise",
    "crates/achost-webui-api",
    "crates/achost-runtime-core",
    "crates/achost-docker-runtime",
    "crates/achost-lxc-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
