[package]
name = "achost-lxc-runtime"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
